Blur, deteccion de bordes

--- a/Entregable/index.html
+++ b/Entregable/index.html
@@ -28,6 +28,8 @@
             <button draggable="false" type="button" class="btn customBtn btn-sm">Saturacion</button>
             <button draggable="false" type="button" class="btn customBtn btn-sm">Sepia</button>
             <button draggable="false" type="button" class="btn customBtn btn-sm">Binarizacion</button>
+            <button draggable="false" type="button" class="btn customBtn btn-sm">Difuminar</button>
+            <button draggable="false" type="button" class="btn customBtn btn-sm">Deteccion de bordes</button>
             <button draggable="false" type="button" class="btn customBtn btn-sm">Mas Brillo</button>
             <button draggable="false" type="button" class="btn customBtn btn-sm">Menos Brillo</button>
         </div>
