--- a/Entregable/index.html
+++ b/Entregable/index.html
@@ -17,6 +17,7 @@
             <button id="resetBtn"><i class="fas fa-snowplow"></i></button>
             <button id="btnPencil"><i class="fas fa-pencil-alt"></i></button>
             <button id="btnEraser"><i class="fas fa-eraser"></i></button>
+            <button id="btnDownload"><i class="fas fa-cloud-download-alt"></i></button>
             <input type="file" id="imgFile">
             <button id="downloadCanvas" class="invisible">Descargar</button>
         </div>
