--- a/Entregable/index.html
+++ b/Entregable/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="col-4 user-select-none">
             <input type="color" name="" id="inputColor">
-            <input type="range" name="" id="inputRange" min="1" default="1" max="50">
+            <input type="range" name="" id="inputRange" min="1" default="1" value="1" max="50">
             <button id="resetBtn"><i class="fas fa-snowplow"></i></button>
             <button id="btnPencil"><i class="fas fa-pencil-alt"></i></button>
             <button id="btnEraser"><i class="fas fa-eraser"></i></button>
