--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -12,15 +12,15 @@
     <nav class="navbar navbar-dark bg-dark d-flex justify-content-around ">
         <span class="navbar-brand h1 ">Entregable 2</span>
         <a href="https://exa.unicen.edu.ar/" target="_blank">
-            <img src="./assets/exa.png" width = '200px' class="img-fluid" alt="...">
+            <img src="assets/exa.png" width = '200px' class="img-fluid" alt="...">
         </a>
         <span class="navbar-brand mb-0 h1">Porcaro Tomas</span>
     </nav>
     <div class="turn">
         <h1 unselectable class="textH1">
             <p class="textP">Turno de </p>
-            <img class="hideFicha fichaAzul img-fluid imgText float-right" width="50px" height="50px" src="./assets/fichaAzul.png" alt="">
-            <img class="showFicha fichaRoja img-fluid imgText float-right" width="50px" height="50px"  src="./assets/fichaRoja.png" alt="">
+            <img class="hideFicha fichaAzul img-fluid imgText float-right" width="50px" height="50px" src="assets/fichaAzul.png" alt="">
+            <img class="showFicha fichaRoja img-fluid imgText float-right" width="50px" height="50px"  src="assets/fichaRoja.png" alt="">
         </h1>
     </div>
     <div class="pyro hide">
@@ -28,7 +28,7 @@
         <div class="after"></div>
     </div>
     <div class="container">
-        <img class="btnReset hide" src="./assets/resetBtn.png" height="80px" width="90px"alt="">
+        <img class="btnReset hide" src="assets/resetBtn.png" height="80px" width="90px"alt="">
         <canvas id="canvasGame"></canvas>
     </div>
 
