--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -19,8 +19,8 @@
     <div class="turn">
         <h1 unselectable class="textH1">
             <p class="textP">Turno de </p>
-            <img class="hideFicha fichaAzul img-fluid imgText float-right" width="50px" height="50px" src="assets/fichaAzul.png" alt="">
-            <img class="showFicha fichaRoja img-fluid imgText float-right" width="50px" height="50px"  src="assets/fichaRoja.png" alt="">
+            <img class="hideFicha fichaAzul img-fluid imgText float-right" width="50vw" height="50vh" src="assets/fichaAzul.png" alt="">
+            <img class="showFicha fichaRoja img-fluid imgText float-right" width="50vw" height="50vh"  src="assets/fichaRoja.png" alt="">
         </h1>
     </div>
     <div class="pyro hide">
