--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -15,6 +15,17 @@
             <img src="assets/exa.png" width = '200px' class="img-fluid" alt="...">
         </a>
         <span class="navbar-brand mb-0 h1">Porcaro Tomas</span>
+        <div class="form-group mx-sm-3 mb-4">
+            <label for="rows" class="sr-only">Filas</label>
+            <input type="number" class="form-control" id="rows" placeholder="Filas">
+        </div>
+        <div class="form-group mx-sm-3 mb-4">
+            <label for="inputPassword2" class="sr-only">Columnas</label>
+            <input type="number" class="form-control" id="cols" placeholder="Columnas">
+        </div>
+        <div class="form-group mx-sm-3">
+            <button type="button" class="btn btn-outline-success btnSend">Cambiar</button>
+        </div>
     </nav>
     <div class="turn">
         <h1 unselectable class="textH1">
@@ -28,7 +39,7 @@
         <div class="after"></div>
     </div>
     <div class="container">
-        <img class="btnReset hide" src="assets/resetBtn.png" height="80px" width="90px"alt="">
+        <img class="btnReset" src="assets/resetBtn.png" height="80px" width="90px"alt="">
         <canvas id="canvasGame"></canvas>
     </div>
 
