submit button animation click

--- a/Entregable3/Entregable/form.html
+++ b/Entregable3/Entregable/form.html
@@ -59,8 +59,12 @@
                             <label>Critica</label>
                         </div>
                     </div>
-                    <div class=>
-                        <div class="submit-btn">Submit Critica</div>
+                    <div>
+                        <button class="submit-button state-0">
+                            <span class="pre-state-msg">Submit</span>
+                             <span class="current-state-msg hide">Sending...</span>
+                              <span class="done-state-msg hide">Done!</span>
+                        </button>
                     </div>
             </div>
         </div>
